# daailyapis-python-client

./: .env.example  .gitignore  Makefile  README.md  SAMPLES.md  cloudbuild-build-package.yaml  cloudbuild-test-suite.yaml  pyproject.toml  setup.py
.github/workflows/: check-version-bump.yaml  python-test-suite-daaily-package.yaml  ruff-linting-and-formatting.yaml
daaily/: __init__.py  _auth.py  _utils.py  auth_sally.py  credentials.py  credentials_sally.py  enums.py  exceptions.py  models.py  version.py
daaily/fifi/: client.py  constants.py  enums.py  utility.py
daaily/franklin/: __init__.py  client.py  constants.py  response.py  responses.py
daaily/http/: client.py  enums.py  models.py  utility.py
daaily/lucy/: __init__.py  client.py  config.py  constants.py  enums.py  models.py  resources.py  response.py  utility.py  utils.py
daaily/lucy/resources/: __init__.py  attribute.py  collection.py  creator.py  distributor.py  enums.py  fair.py  family.py  file.py  file_DEPRECATED.py  filter.py  group.py  journalist.py  manufacturer.py  material.py  product.py  project.py  space.py  story.py
daaily/lucy/resources/attribute/: resource.py  type.py  utils.py
daaily/lucy/resources/collection/: resource.py
daaily/lucy/resources/creator/: resource.py
daaily/lucy/resources/distributor/: resource.py
daaily/lucy/resources/family/: resource.py
daaily/peggie/: client.py  enums.py  utility.py
daaily/sally/: client.py  constants.py  exceptions.py  utility.py
daaily/score/: README.md  __init__.py  client.py  constants.py  models.py  product.py  utils.py
daaily/similarity/: client.py
daaily/transport/: __init__.py  exceptions.py  urllib3_http.py
daaily_v2/: enums.py
daaily_v2/http/: client.py  utility.py
daaily_v2/lucy/: client.py  enums.py  utility.py
daaily_v2/sally/: client.py  constants.py  exceptions.py  utility.py
docs/: franklin.md  index.md  lucy.md
samples/: extact_image_fifi.py  get_data_daaily_v2.py  get_data_from_lucy.py  get_data_from_lucy_daaily_v2.py  get_products_from_lucy.py  get_token_from_sally.py  main.py  predict_entity_peggie.py
samples/franklin/: predict_group.py
samples/lucy/: add_about_to_manufacturer.py  add_address_to_manufacturer.py  add_file_to_temp_bucket.py  add_image_to_manufacturer.py  add_image_to_product.py  add_or_update_family_image.py  add_or_update_manufacturer_image.py  add_or_update_product_attributes.py  add_or_update_product_image.py  change_status_manufacturer_image.py  check_attributes_exist.py  compare_lucy_images.py  create_attribute.py  create_manufacturer.py  determine_field_owner_on_product.py  determine_product_score_up_to_date.py  get_distributor_pdf_signed_url.py  get_entities.py  get_filtered_families.py  get_filtered_manufacturers.py  get_filtered_materials.py  get_filtered_products.py  get_manufacturer_by_domain.py  get_manufacturer_pdf_signed_url.py  get_paginated_entities.py  get_paginated_entities_lucy.py  get_product_by_id.py  get_product_cad_signed_url.py  get_product_pdf_signed_url.py  get_products.py  get_products_async.py  refresh_product.py  search_attributes.py  search_creators.py  update_attributes.py  upload_distributor_pdf_to_gcs.py  upload_manufacturer_pdf_to_gcs.py  upload_product_cad_to_gcs.py  upload_product_image_to_gcs.py  upload_product_pdf_to_gcs.py
samples/score/: get_product_scores.py
tests/: fixtures.py  requirements.txt  test_client.py  test_credentials.py  test_lucy_client.py  test_lucy_utils.py  test_sally_credentials.py  test_score_client.py  test_score_models.py  test_similarity_client.py  test_utilities.py  utils.py
tests/integrated/: test_auth_lucy.py
tests/lucy/: test_lucy_utils.py
tests/test_lucy_resources/: test_lucy_product_resource.py
tests/transport/: fixtures.py  test_http_client.py
(+13 files in other folders)
