[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "daaily/version.py"

[tool.hatch.build.targets.wheel]
packages = ["daaily"]

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/samples", ".vscode", "/tests"]

[project]
name = "daaily"
authors = [{ name="Daaily Dev Team", email="dev@daaily.com" }]
description = "Daaily API Library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["urllib3>=2.1.0,<3.0"]
dynamic = ["version"]

[project.urls]
"Source code" = "https://github.com/DAAily/daailyapis-python-client"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
unfixable = ["F841","F401"]
extend-select = ["UP", "E501"]
extend-ignore = ["B008"]
select = ["E", "F", "B", "Q", "C", "I"]
fixable = ["E", "F", "B", "Q", "C", "I"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true

[tool.ruff.mccabe]
max-complexity = 10
